[package]
name = "cv-feature"
version = "0.1.0"
authors = ["Duncan Hamill <duncanrhamill@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cv = "0.3"
image = "0.23"
nalgebra = "0.21"
derive_more = { version = "0.99", default-features = false }
log = { version = "0.4", default-features = false }
ndarray = { version = "0.13.1", default-features = false }
nshare = { version = "0.1.1", features = ["ndarray", "image"] }
minifb = "0.16"
imageproc = "0.20"
threadpool = { version = "1.8", optional = true }

[dev-dependencies]
csv = "1.1"

[features]
default = []

parallel = ["threadpool"]